no more spacing issues, just need to fix navbar

--- a/mediaMobile.css
+++ b/mediaMobile.css
@@ -527,6 +527,8 @@ section .content {
     font-weight: normal;
     font-size: 14px;
     text-align: center;
+    padding-right: 10px;
+    padding-left: 10px;
   }
 
   #donorCount,
