--- a/mediaSmallMobile.css
+++ b/mediaSmallMobile.css
@@ -468,6 +468,8 @@
     font-weight: normal;
     font-size: 14px;
     text-align: center;
+    padding-right: 10px;
+    padding-left: 10px;
   }
 
   #donorCount,
